src/surveyinterface/static/css/style.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    min-width: 500px;
    min-height: 600px;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#visualizationContent {
    height: 100%;
    text-align: center;
    width: calc(100% - 300px);
    float: right;
    overflow: hidden;
    padding: 4px;
}

#surveyContainer .survey {
    border: 1px solid #ddd;
    background-color: #F3FAFF;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    padding: 20px;
    height: 300px;
}

#txtDescription {
    height: 50px;
    font-size: 16px;
}

#surveyContainer .caption {
    width: 100%;
}

.survey .caption {
    padding: 9px;
    color: #333;
    float: left;
    width: 150px;
}

#surveyInfo img {
    padding: 4px;
    float: left;
    display: inline;
    width: 40px;
}

#surveyInfo {
    width: 100%;
    border: 1px solid rgb(163, 163, 163);
    float: left;
}

.panel-left {
    width: 300px;
    float: left;
    height: calc(100% - 52px);
}

.dropdown-menu {
    margin-top: 10px;
    text-align: left;
}

.dropdown-menu li:not(.divider) a:hover {
    background: #ddd;
}

.survey img {
    height: 30px;
}

.survey a.blue-button, .survey a.gray-button {
    margin-bottom: 5px;
    text-decoration: none;
}

#btn-back {
    margin-top: 30px;
    float:left;
}

#view-instrument, #view-data {
    float: right;
    margin-top: 30px;
}

#surveyContainer {
    width: 1000px;
    margin: auto;
    margin-top: 71px;
}

svg {
    cursor: default;
}

#mainContent {
    height: calc(100% - 70px);
    overflow: auto;
}

#listQuestions {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    float: left;
    margin-bottom: 0;
    border-right: 1px solid #ddd;
}

#listQuestions label.disabled {
    color: #969696 !important;
    cursor: not-allowed;
}

#listQuestions a, #listQuestions h4 {
    /*width:270px;*/
    color: #000000;
    cursor: default;
    text-decoration: none;
    font-size: 14px;
    margin: 0 !important;
    display: inline-block;
}

text.shadow {
    stroke: white;
    stroke-width: 2.5px;
    opacity: 0.9;
}

#options {
    width: 300px;
    height: 100px;
    float: right;
}

#labels {
    width: 30%;
    height: 100px;
    float: left;
}

.radio input[type=radio], .radio-inline input[type=radio], .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox] {
    float: left;
    margin-left: -10px;
    margin-right: 5px;
}

#options .dropdown {
    width: 198px;
    float: right;
}

#top-bar .btn-group {
    margin: 5px;
}

#top-bar {
    width: 100%;
    margin-bottom: 2px;
    height: 90px;
}

#map-canvas {
    height: calc(100% - 172px);
    width: calc(100% - 320px);
    margin: 0 10px;
    border: 1px solid #666;
    position: absolute;
    z-index: -1;
    display: none;
}

.panel-primary {
    border-color: #000000;
}

#captionContainer {
    width: calc(100% - 153px);
    float: left;
    margin-bottom: 0;
    border-radius: 0;
    border-color: #000;
      height: 100%;
}

#viewContainer {
    width: 150px;
    height: 90px;
    float: right;
    border-color: #000;
    margin-bottom: 0;
    border-radius: 0;
}

#captionContainer .panel-heading, #viewContainer .panel-heading {
    height: 38px;
    border-top-right-radius: 0;
    border-top-left-radius: 0;
    text-shadow: 0 1px 0 #0A0A0A;
    background: #42484E;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
    border-color: #000;
}

#viewContainer button {
    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
    border: 1px solid rgb(108, 96, 96);
    opacity: 1;
    text-shadow: 0 1px 0 #fff;
}

#viewContainer .btn-default.disabled {
    color: #FFF;
    border: 1px solid rgb(108, 96, 96) !important;
    background-color: #5F5F5F !important;
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
    background-image: none;
    text-shadow: 0 1px 0 #000;
    opacity: 1;
}

#viewContainer .btn[disabled], #btnCategories[disabled] {
    cursor: not-allowed; /* Confirmed broken for current version of bootstrap https://github.com/twbs/bootstrap/issues/16088 */
    color: #AAA;
    text-shadow: 0 1px 0 #fff;
}

.caption p {
    clear: left;
}

#btnCategories {
    width: 67px;
    height: 24px;
    border-radius: 1px;
    color: #000;
    background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
    background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
    text-shadow: 0 1px 0 #fff;
    border: 1px solid rgb(108, 96, 96);
    text-align: left;
    position: absolute;
    left: 7px;
    top: 5px;
}

#btnCategories span {
    margin-left: -7px;
    top: -3px;
}

span.btnAdd, span.btnSubstract {
    cursor: pointer;
    font-size: 14px;
    color: #AAA;
    margin-top: 7px;
    display: none;
    float: right;
    right: 18px;
    width: 0;
    height: 0;
}

span.btnAdd:hover {
    color: #777
}

hr {
    margin: 0;
}

.radio, .checkbox {
    display: block;
    min-height: 0;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
}

#listQuestions .caret {
    margin-left: -15px;
    margin-top: 5px;
}

.caret {
    border-top: 6px solid;
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;
    color: #666;
}

#listQuestions li {
    /*padding:10px 10px;*/
    outline: none;
    list-style-type: none;
}

.panel-collapse li {
    border-bottom: 1px solid #838383;
}

.even {
    background: #FFF;
}

.odd {
    background: #EFEFEF;
}

#listQuestions li:not(.indented) {
    border: 1px solid #aaa;
    border-top: 0;
}
/* ... */

